# trajectory_planning_gui

./: CMakeLists.txt  Eigen3_installation  README.md  package.xml
config/: joystick.yaml
include/trajectory_planning_gui/: TabProxy.h  appsettings.h  main_window.hpp  point_tree_item.hpp  qnode.hpp
launch/: joystick_control.launch  trajectory_planning_gui.launch
msg/: JogFrame.msg  JogJoint.msg  MoveJoint.msg
resources/: images.qrc
src/: appsettings.cpp  main.cpp  main_window.cpp  point_tree_item.cpp  point_tree_model.cpp  qnode.cpp
ui/: main_window.ui
